<resources>
    <string name="app_name">BAHIKHATA</string>
    <string name="prompt_email">Email(ईमेल)</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="get_otp">Get Otp</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="connecting_to_server">Conneting To Server !!</string>
    <string name="please_wait">Please Wait...</string>
    <string name="updating_data">Updating</string>
    <string name="give_company_id">Give Company ID</string>
    <string name="please_singh_by_giving_company_id">Please Give Valid Company ID Before SignIn.</string>
    <string name="loading_data">Please Wait... \n Loading Data</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="accounts">Accounts</string>
    <string name="title_activity_add_project">Add New Project</string>
    <string name="give_project_id">Give Project ID.</string>
    <string name="give_project_name">Give Project Name</string>
    <string name="give_project_location">Give Project Location</string>
    <string name="give_work_division">Give Work Division</string>
    <string name="give_work_amount">Give Work Amount</string>
    <string name="remark_optional">Remark(optional)</string>
    <string name="save">Save</string>
    <string name="title_activity_add_users">Add Users</string>
    <string name="title_activity_add_transaction">AddTransactionActivity</string>
    <string name="please_wait_getting_new_user_id">Getting New User ID. Please Wait...</string>
    <string name="check_for_master_account">Check For Master Account.</string>
    <string name="give_user_name">Give User Name.</string>
    <string name="give_user_address">Give User Adress.</string>
    <string name="give_user_phone_number">Give User\'s Phone Number</string>
    <string name="give_user_email">Give user\'s Email</string>
    <string name="select_project_to_give_access">click Here To Give Project Access.</string>
    <string name="title_activity_projects_view">ProjectsViewActivity</string>
    <string name="projets">PROJECTS</string>
    <string name="add_project">Add Project</string>
    <string name="users">USERS</string>
    <string name="transactions"> \u20B9 TRANSACTIONS</string>
    <string name="error_01">Error !! Document Not Found ?</string>
    <string name="error_02">Error !! Your Account Not Found ||</string>
    <string name="error_03">ID Must Not Empty !!</string>
    <string name="error_04">ID Should Not Be Empty !!</string>
    <string name="error_05">Name Should Not Be Empty !!(नाम खाली है)</string>
    <string name="error_06">User Name Should Not Be Empty !!(यक्ति/सप्लायर का नाम खाली है)</string>
    <string name="name">Name(नाम):</string>
    <string name="id">ID(आईडी):</string>
    <string name="division">Division(डिवीज़न):</string>
    <string name="address">Address(पता):</string>
    <string name="project_start_date">Project Start Date:</string>
    <string name="project_end_date">Project End Date:</string>
    <string name="remark">Remarks</string>
    <string name="amountDot">Amount(रकम):</string>
    <string name="tag_project_id">tag_project_id</string>
    <string name="title_activity_users_view">UsersViewActivity</string>
    <string name="new_user_id">New User ID: %s</string>
    <string name="new_sup_user_id">New Supervisor ID: %s</string>
    <string name="admin">ADMIN</string>
    <string name="email">Email:</string>
    <string name="created_date">Created Date(सिस्टम टाइम):</string>
    <string name="phone_number">Phone Number(फ़ोन नंबर):</string>
    <string name="tag_user_id">tag_user_id</string>
    <string name="project_access">Project Access:</string>
    <string name="designation">Designation:</string>
    <string name="select_projects">SELECT PROJECTS(कार्य चुने)</string>
    <string name="done">Done</string>
    <string name="create_transaction">Create Transaction(नया लेनदेन जोड़े)</string>
    <string name="add_material">Add Material/Service</string>
    <string name="types_of_service">Types of Service</string>
    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="transaction_date">Date</string>
    <string name="get">Get</string>
    <string name="give_sender_id">Give Sender ID</string>
    <string name="select_project">Select Project.</string>
    <string name="projects"> <u>PROJECTS</u></string>
    <string name="select_sender">Select Sender</string>
    <string name="sender">SENDER(देने वाला)</string>
    <string name="select_receiver">select Receiver</string>
    <string name="receiver">RECEIVER(लेने वाला)</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="title_sender">SELECT SENDER</string>
    <string name="title_receiver">SELECT RECEIVER</string>
    <string name="title_project">SELECT PROJECT</string>
    <string name="amount_is_empty">Amount Is Empty</string>
    <string name="project_name_empty">Project Name Is Empty</string>
    <string name="sender_name_is_empty">Sender Name Is Empty</string>
    <string name="receiver_name_is_empty">Receiver Name Is Empty</string>
    <string name="date_month_year_is_empty">Date Or Month Or Year Is Empty !</string>
    <string name="day_should_be_between_1_to_31">Day Should Be Between 1 and 31 !</string>
    <string name="month_should_be_between_1_to_12">Month Should Be Between 1 and 12 !</string>
    <string name="year_should_be_more_than_1900">Year Should Be More Than 1900 !</string>
    <string name="sender_and_receiver_same">Sender And Recevier Must Be Different !</string>
    <string name="error_07">There some problem . Please contact to Admin!</string>
    <string name="error_08">Transation Not Possbile !</string>
    <string name="error_09">Transation failed !</string>
    <string name="error_10">Debit or Credit Account is Empty !</string>
    <string name="saving">Saving...</string>
    <string name="saved">Saved Successfully</string>
    <string name="failed">Failed</string>
    <string name="saved_successfully">Saved SuccessFully !</string>
    <string name="add_more">ADD MORE</string>
    <string name="transaction_id">Transaction ID:</string>
    <string name="sender_id">Sender ID</string>
    <string name="receiver_id">Receiver ID</string>
    <string name="amount">Amount</string>
    <string name="project_id_1">Project ID(वर्क)</string>
    <string name="time_stamp">Timestamp</string>
    <string name="transaction_type">Transaction Type:</string>
    <string name="log_in_id">LogIn ID</string>
    <string name="verified">Verified:</string>
    <string name="verify">Verify</string>
    <string name="del">Del</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="tag_transaction_id">tag_transaction_id</string>
    <string name="tag_material_id">tag_material_id</string>
    <string name="received">Received(लिया)</string>
    <string name="sent">Sent(दिया)</string>
    <string name="transaction_deleted">Transaction Deleted !</string>
    <string name="transaction_verified">Transaction Verified !</string>
    <string name="title_activity_bank_account_view">BankAccountViewActivity</string>
    <string name="title_activity_add_bank_account">AddBankAccountActivity</string>
    <string name="please_wait_getting_bank_id">Please Wait Getting Bank ID...</string>
    <string name="give_bank_account_number">Give Bank Account Number</string>
    <string name="give_payee_name">Give Payee Name</string>
    <string name="give_bank_account_ifsc_code">Give Bank Account IFSC code</string>
    <string name="give_bank_account_branch_name">Give Branch Name</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="accout_id_is_empty">Account id is Empty .</string>
    <string name="account_no_empty">Account No is Empty.</string>
    <string name="bank_accounts">BANK ACCOUNTS</string>
    <string name="payee">Payee</string>
    <string name="lfsc_code">IFSC Code:</string>
    <string name="branch">Branch</string>
    <string name="account_no">Account No</string>
    <string name="credit_account">Credit Account</string>
    <string name="debit_account">Debit Acccount</string>
    <string name="rtgs">RTGS</string>
    <string name="neft">NEFT</string>
    <string name="upi">UPI</string>
    <string name="other">OTHER</string>
    <string name="title_bank_account">BANK ACCOUNT</string>
    <string name="debited_to">Debit A/C</string>
    <string name="credited_to">Credit A/C</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="tag_account_id">tag_account_id</string>
    <string name="tag_user_designation">tag_user_designation</string>
    <string name="serial_no">S. No.</string>
    <string name="creating_file">Creating File</string>
    <string name="excel_file">Excel</string>
    <string name="file_not_found">File Not Found !!</string>
    <string name="edit">EDIT</string>
    <string name="update_failed">Update Failed !!</string>
    <string name="give_mb_number">Give MB Number</string>
    <string name="give_head">Give Head (ex : PMGSY, MMGSY etc..)</string>
    <string name="give_main_amount">Give Main Amount)</string>
    <string name="maintenance_amount_for_5_years">Maintenance Amount For 5 Years
    </string>
    <string name="first_year">1st year</string>
    <string name="second_year">2nd Year</string>
    <string name="third_year">3rd Year</string>
    <string name="fourth_year">4th Year</string>
    <string name="fifth_year">5th Year</string>
    <string name="automatically_project_id_will_be_generated">Automatically Project ID will be Generated...</string>
    <string name="update_done">Update Done</string>
    <string name="mb_no">MB No.:</string>
    <string name="head">Head:</string>
    <string name="main_amount">Main Amount:</string>
    <string name="maintenance_amount_1st_year">Maintenance 1st Yr:</string>
    <string name="maintenance_amount_2nd_year">Maintenance 2nd Yr:</string>
    <string name="maintenance_amount_3rd_year">Maintenance 3rd Yr:</string>
    <string name="maintenance_amount_4th_year">Maintenance 4th Yr:</string>
    <string name="maintenance_amount_5th_year">Maintenance 5th Yr:</string>
    <string name="material_or_service">MATERIAL</string>
    <string name="search_user">Search User</string>
    <string name="add_new_bank_account">Add New Account</string>
    <string name="cancel">Cancel</string>
    <string name="drag_down_for_addition">Drag down to Add</string>
    <string name="switch_view">Switch</string>
    <string name="add_new_transaction">Add Transaction</string>
    <string name="optional_column">Optional Field</string>
    <string name="work_name">Work(कार्य)</string>
    <string name="create_pdf">PDF</string>
    <string name="filter">Filter</string>
    <string name="add_new">Add New</string>
    <string name="add_new_units">Add New Units</string>
    <string name="add_new_medium">Add New Medium</string>
    <string name="add_all_visible">ADD ALL VISIBLE</string>
    <string name="change_rate">Change Rate</string>
    <string name="payments">\u20B9 PAYMETNS</string>
    <string name="relate_transactions">Relate Transactions</string>
    <string name="change_subcategory">Change Subcategory</string>
    <string name="change_project">Change Project</string>
</resources>