<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/dialog_project_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:backgroundTint="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="5dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_dark"
            android:orientation="horizontal"
            android:weightSum="2">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:text="@string/optional_column"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

        <Button
                android:id="@+id/btn_create_pdf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/create_pdf"
                android:textSize="30sp"
                android:textStyle="bold" />
    </LinearLayout>

    <CheckBox
            android:id="@+id/cb_sender_name_pdf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sender"
            android:textColor="@color/selector_checkbox_bg_color"
            android:textSize="20sp" />

    <CheckBox
            android:id="@+id/cb_receiver_name_pdf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receiver"
            android:textColor="@color/selector_checkbox_bg_color"
            android:textSize="20sp" />

    <CheckBox
            android:id="@+id/cb_work_name_pdf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/work_name"
            android:textColor="@color/selector_checkbox_bg_color"
            android:textSize="20sp" />

    <CheckBox
            android:id="@+id/cb_account_name_pdf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bank_accounts"
            android:textColor="@color/selector_checkbox_bg_color"
            android:textSize="20sp" />

    <CheckBox
            android:id="@+id/cb_remarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remark"
            android:textColor="@color/selector_checkbox_bg_color"
            android:textSize="20sp" />


</LinearLayout>
