<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="40dp"
        android:layoutDirection="ltr"
        android:orientation="vertical">

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_margin="4dp"
            android:orientation="horizontal">
        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/id"
                android:textColor="@android:color/darker_gray"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tv_user_id"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/accounts"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_margin="4dp"
            android:orientation="horizontal">
        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/name"
                android:textColor="@android:color/darker_gray"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/accounts"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_margin="4dp"
            android:orientation="horizontal">
        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/address"
                android:textColor="@android:color/darker_gray"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tv_user_address"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/accounts"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_margin="4dp"
            android:orientation="horizontal">
        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/phone_number"
                android:textColor="@android:color/darker_gray"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tv_user_phone"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/accounts"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_margin="4dp"
            android:orientation="horizontal">
        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/email"
                android:textColor="@android:color/darker_gray"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tv_user_email"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/accounts"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_margin="4dp"
            android:orientation="horizontal">
        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/created_date"
                android:textColor="@android:color/darker_gray"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tv_user_created_date"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/accounts"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_margin="4dp"
            android:orientation="horizontal">
        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/designation"
                android:textColor="@android:color/darker_gray"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tv_user_designation"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/accounts"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_margin="4dp"
            android:orientation="horizontal">
        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/project_access"
                android:textColor="@android:color/darker_gray"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tv_user_project_access"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/accounts"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_margin="4dp"
            android:orientation="horizontal">
        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/remark"
                android:textColor="@android:color/darker_gray"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tv_user_remarks"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/accounts"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_margin="4dp"
            android:orientation="horizontal">
        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/amountDot"
                android:textColor="@android:color/darker_gray"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/tv_user_benefits"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/accounts"
                android:textColor="@color/selector_text_color_state"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <ImageView android:layout_width="match_parent"
               android:background="@color/colorAccent"
               android:layout_height="1dp"/>

</LinearLayout>