<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        android:orientation="vertical"
        android:weightSum="3">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="2"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/tv_project_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/accounts"
                android:textStyle="bold" />


        <TextView
                android:id="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|right"
                android:padding="2dp"
                android:text="@string/accounts"
                android:textColor="@color/selector_text_color_state"
                android:textSize="17sp"
                android:textStyle="bold"
                android:visibility="gone" />


    </LinearLayout>

    <TextView
            android:id="@+id/tv_project_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="middle"
            android:gravity="left"
            android:padding="4dp"
            android:singleLine="true"
            android:text="@string/action_sign_in"
            android:textStyle="bold" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

        <TextView
                android:id="@+id/tv_project_transactions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/selector_button_background_sender"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/transactions"
                android:textColor="@color/selector_text_color_state"
                android:textStyle="bold"
                android:visibility="visible" />

        <TextView
                android:id="@+id/tv_project_material"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/selector_button_background_material"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/material_or_service"
                android:textColor="@color/selector_text_color_state"
                android:textStyle="bold"
                android:visibility="visible" />

        <TextView
                android:id="@+id/tv_payments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/selector_button_background_receiver"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/payments"
                android:textColor="@color/selector_text_color_state"
                android:textStyle="bold"
                android:visibility="visible" />

    </LinearLayout>

</LinearLayout>